[build-system]
build-backend = "hatchling.build"
requires = ["hatchling>=1.27.0", "hatch-fancy-pypi-readme"]

[project]
authors = [
    { name = "Marek Sebera", email = "marek.sebera@gmail.com" }
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)",
    "Environment :: Console",
    "Topic :: Communications :: Ham Radio",
    "Topic :: Software Development :: Libraries",
    "Operating System :: POSIX :: Linux",
    "Typing :: Typed",
    "Framework :: Pytest",
    "Intended Audience :: Telecommunications Industry",
    "Natural Language :: English",
    "Programming Language :: Python :: 3.8",
]
dependencies = [
    "kaitaistruct>=0.10",
]
description = "Various DMR related protocols implemented with kaitai-first approach"
dynamic = ["readme"]
keywords = [
    "dmr",
    "kaitai",
    "etsi",
    "ham",
    "mmdvm",
    "homebrew",
    "radio",
    "hytera",
    "motorola"
]
license = { text = "AGPL-3.0" }
name = "dmr-kaitai"
requires-python = ">=3.8"
version = "1.1.1"

[project.optional-dependencies]
pre-commit = ["pre-commit>=3.0.0"]
test = [
    "pytest>=8.1.1",
    "pytest-cov>=4.1.0",
    "coverage>=7.4.0",
    # pre-commit v3.6.0 drops python<3.9 support, this should allow developers/testers to use the last version available to their python runtime
    "pre-commit",
    "black>=22.6.0"
]

[project.scripts]
debug-motorola-ars = "okdmr.kaitai.tools.debug_motorola:DebugMotorola.ars"
debug-motorola-tmp = "okdmr.kaitai.tools.debug_motorola:DebugMotorola.tmp"
debug-hytera-rrs = "okdmr.kaitai.tools.debug_hytera:DebugHytera.rrs"
debug-hytera-tmp = "okdmr.kaitai.tools.debug_hytera:DebugHytera.tmp"
debug-hytera-ipsc = "okdmr.kaitai.tools.debug_hytera:DebugHytera.ipsc"
debug-hytera-rcp = "okdmr.kaitai.tools.debug_hytera:DebugHytera.rcp"
debug-hytera-dds = "okdmr.kaitai.tools.debug_hytera:DebugHytera.dds"
debug-hytera-hdap = "okdmr.kaitai.tools.debug_hytera:DebugHytera.hdap"
debug-hytera-hrnp = "okdmr.kaitai.tools.debug_hytera:DebugHytera.hrnp"
debug-hytera-hstrp = "okdmr.kaitai.tools.debug_hytera:DebugHytera.hstrp"
debug-hytera-lp = "okdmr.kaitai.tools.debug_hytera:DebugHytera.lp"
debug-hytera-dtp = "okdmr.kaitai.tools.debug_hytera:DebugHytera.dtp"
debug-hytera-tp = "okdmr.kaitai.tools.debug_hytera:DebugHytera.tp"
debug-homebrew = "okdmr.kaitai.tools.debug_homebrew:DebugHomebrew.homebrew"
debug-mmdvm = "okdmr.kaitai.tools.debug_homebrew:DebugHomebrew.mmdvm"

[project.urls]
repository = "https://github.com/OK-DMR/dmr-kaitai"

[tool.coverage.report]
exclude_lines = [
    "if __name__ == .__main__.:",
    "pass",
    "continue",
    "traceback.print_exc()",
    "raise KeyError",
    "raise ValueError"
]
precision = 2

[tool.coverage.run]
# branch is currently broken see: https://github.com/nedbat/coveragepy/issues/1530
branch = false
source = ["okdrm.kaitai"]

[tool.hatch.build.targets.sdist]
exclude = [
    ".gitignore",
    "/.gitignore",
    ".gitkeep",
    "/okdmr/tests",
    "/.github"
]
include = [
    "/README.md",
    "/okdmr",
    "/Makefile",
    "/.yamllint",
    "/.pre-commit-config.yaml",
    "/setup.py"
]

[tool.hatch.build.targets.wheel]
packages = ["/okdmr"]

[tool.hatch.metadata.hooks.fancy-pypi-readme]
content-type = "text/markdown"
fragments = [
    { path = "README.md" }
]

[tool.isort]
profile = "black"
